# amigactl

./: .gitignore  Makefile  README.md  amigactl.ps1  amigactl.sh
atrace/: atrace.h  funcs.c  main.c  ringbuf.c  stub_gen.c
client/: amigactl.conf.example  amigactl.ps1  amigactl.sh  pyproject.toml
client/amigactl/: __init__.py  __main__.py  colors.py  protocol.py  shell.py  trace_grid.py  trace_tiers.py  trace_ui.py
daemon/: arexx.c  arexx.h  config.c  config.h  daemon.h  exec.c  exec.h  file.c  file.h  main.c  net.c  net.h  sysinfo.c  sysinfo.h  tail.c  tail.h  trace.c  trace.h
docs/: AGENT_GUIDE.md  COMMANDS.md  PROTOCOL.md  agent-guide.md  configuration.md  installation.md  protocol-commands.md  protocol.md
docs/atrace/: adding-functions.md  architecture.md  cli-reference.md  daemon-integration.md  event-format.md  filtering.md  index.md  interactive-viewer.md  limitations.md  output-tiers.md  performance.md  python-api.md  quickstart.md  reading-output.md  recipes.md  ring-buffer.md  stub-mechanism.md  trace-run.md  traced-functions.md  troubleshooting.md
docs/cli/: commands.md  index.md  quickstart.md
docs/shell/: architecture.md  arexx.md  index.md  (+12 more)
scripts/: bg_capture.py  capture_cnet_trace.py
testapp/: atrace_test.c
tests/: conftest.py  test_arexx.py  test_connection.py  test_exec.py  test_file.py  test_handle_resolver.py  test_shell.py  test_shell_integration.py  test_sysinfo.py  test_tail.py  test_trace.py  test_trace_app.py  test_trace_cli.py  test_trace_grid.py  test_trace_tiers.py  test_trace_ui.py  test_trace_unit.py
tools/: mkicon.py
